Implemented auth and database with google  sign in popup